Text blocks are now automatically deleted if they are empty
