# dragon-core/dragon_core/api/entities.py
@@ -778,6 +778,25 @@ def edit_comment(ID, commentID, body, user, HTML: bool = False):
     return abort(400, "Something went wrong, try again")
 
 
+def delete_comment(ID, commentID):
+
+    if ID not in INDEX:
+        abort(404, f"Entity with ID {ID} not found")
+
+    ent = INDEX[ID]
+
+    try:
+        ret = ent.delete_comment(commentID)
+        if ret:
+            path_copy = create_path_entity_copy(ent)
+            path_copy.to_TOML(Path(UUID_TO_PATH_INDEX[ID]))
+            return make_response("Comment deleted successfully", 200)
+    except ValueError as e:
+        abort(400, str(e))
+
+    return abort(400, "Something went wrong, try again")
+
+
 def add_library(body):
     """
     Creates a new library and adds it to the system.
@@ -846,18 +865,14 @@ def add_entity(body):
     parent_path = Path(UUID_TO_PATH_INDEX[parent.ID])
     ent_path = parent_path.parent.joinpath(ent.ID[:8] + "_" + ent.name + ".toml")
 
-    # Because the children do not have a path yet, you need to make a path copy before adding the child
-    parent_copy = create_path_entity_copy(parent)
-
     add_ent_to_index(ent, ent_path)
-
-    # Add the child ID to the parent entity in memory.
-    parent.children.append(ent.ID)
 
     # Create copy of the entity with paths to create the TOML file.
     ent_copy = create_path_entity_copy(ent)
 
-    parent_copy.add_child(ent_path)
+    parent.add_child(ent.ID)
+    parent_copy = create_path_entity_copy(parent)
+
     parent_copy.to_TOML(parent_path)
     ent_copy.to_TOML(ent_path)
 
@@ -865,12 +880,7 @@ def add_entity(body):
 
 
 def delete_entity(ID):
-    """
-    Deletes an entity from the system. It will remove the entity from the parent and delete the TOML file
-     immediately.
 
-    :param ID: The ID of the entity to delete
-    """
     if ID not in INDEX:
         abort(404, f"Entity with ID {ID} not found")
 
@@ -881,20 +891,6 @@ def delete_entity(ID):
     ent.deleted = True
     ent_copy = create_path_entity_copy(ent)
     ent_copy.to_TOML(Path(UUID_TO_PATH_INDEX[ID]))
-
-    # Remove the entity from the parent
-    parent.children.remove(ID)
-    parent_copy = create_path_entity_copy(parent)
-    parent_copy.to_TOML(Path(UUID_TO_PATH_INDEX[parent.ID]))
-
-    # Remove the entity from the index
-    del INDEX[ID]
-
-    # Remove the entity from the path to UUID index
-    del PATH_TO_UUID_INDEX[UUID_TO_PATH_INDEX[ID]]
-
-    # Remove the entity from the UUID to path index
-    del UUID_TO_PATH_INDEX[ID]
 
     return make_response("Entity deleted", 201)
 
